common/traefik/kubeflow-pipeline-bind.yaml
apiVersion: networking.k8s.io/v1beta1
kind: IngressClass
metadata:
  name: traefik-lb
spec: 
   controller: traefik.io/ingress-controller
---
apiVersion: "networking.k8s.io/v1beta1"
kind: "Ingress"
metadata:
  name: "pipeline-ingress"
  namespace: kubeflow
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2s        
spec:
  ingressClassName: "traefik-lb"
  rules:
    - http:
        paths:
        - path: "/"
          backend:
            serviceName: "ml-pipeline-ui"
            servicePort: 80
