common/traefik/tensorflow-op-bind.yaml
apiVersion: networking.k8s.io/v1beta1
kind: IngressClass
metadata: 
  name: traefik-lb
spec: 
  controller: traefik.io/ingress-controller
---
apiVersion: "networking.k8s.io/v1beta1"
kind: "Ingress"
metadata:
  name: "tf-operator-ingress"
  namespace: kubeflow
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    
spec:
  ingressClassName: "traefik-lb"
  rules:
  - http:
      paths:
      - path: "/metrics"
        backend:
          serviceName: "tf-job-operator"
          servicePort: 9443
